--- a/templates/labware_upload.html
+++ b/templates/labware_upload.html
@@ -41,7 +41,7 @@
             it just ignores additional rows past what fits on your plate and it will 
             add as many reagents to dispense as you like. HOWEVER, the mantis 
             can only actually dispense 6 at a time. IF you wish to ignore any rows 
-            or columns create a first column named "#".t column.  Then any column names starting
+            or columns create a column named "#".  Then any column names starting
             with "#" will be ignored and any rows with a "#" in the "#" column will
             be ignored. You can try the test file to see how it works.</p>
          <input type = "file" name = "experiment_file" accept=".xlsx, .csv"/><br>
