--- a/templates/labware_upload.html
+++ b/templates/labware_upload.html
@@ -37,10 +37,7 @@
          <h3>File to Convert</h3>
          <p>Excel file template updated with your specific labware.
             An example can be downloaded <a href="/public/Labware Excel Input.xlsx" target="_blank">here</a>.
-            NOTE: The program will work regardless of how many rows or columns you give it,
-            it just ignores additional rows past what fits on your plate and it will 
-            add as many reagents to dispense as you like. HOWEVER, the mantis 
-            can only actually dispense 6 at a time. IF you wish to ignore any rows 
+            IF you wish to ignore any rows 
             or columns create a first column named "#".  Then any rows with a "#" in the "#" column will
             be ignored. You can try the test file to see how it works.</p>
          <input type = "file" name = "experiment_file" accept=".xlsx, .csv"/><br>
