fixed bug for read in of # in excel file

--- a/templates/labware_upload.html
+++ b/templates/labware_upload.html
@@ -38,7 +38,7 @@
          <p>Excel file template updated with your specific labware.
             An example can be downloaded <a href="/public/Labware Excel Input.xlsx" target="_blank">here</a>.
             IF you wish to ignore any rows 
-            or columns create a first column named "#".  Then any rows with a "#" in the "#" column will
+            or columns create a first column named "Hash".  Then any rows with a "#" in the "#" column will
             be ignored. You can try the test file to see how it works.</p>
          <input type = "file" name = "experiment_file" accept=".xlsx, .csv"/><br>
          <br>
